re-build the whole code to understand & apply SPA method..need to work on language selection

--- a/main_page/index.html
+++ b/main_page/index.html
@@ -9,12 +9,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap" rel="stylesheet">
 </head>
+
 <body>
-
-
-
-
-
+<!-- 유저 프로필 -->
   <div class="user-profile">
     <div class="profile-info">
       <img src="./img/user-profile-image.png" alt="User Profile Picture" id="profile-picture">
@@ -22,14 +19,16 @@
     </div>
   </div>
 
+
+
   <h1 id="welcome-text">Welcome to Pong!</h1>
 <div class="container">
     <div id="2D-text" class="game-button">
-        <img src="./img/2d-pong.png" alt="2D Image" class="button-image">
+        <!-- <img src="./img/2d-pong.png" alt="2D Image" class="button-image"> -->
         <span class="text">2D Pong</span>
     </div>
     <div id="3D-text" class="game-button2">
-        <img src="./img/3d-pong.png" alt="3D Image" class="button-image">
+        <!-- <img src="./img/3d-pong.png" alt="3D Image" class="button-image"> -->
         <span class="text">3D Pong</span>
     </div>
 </div>
