3D-mode-select page added

--- a/main_page/new_index.html
+++ b/main_page/new_index.html
@@ -32,15 +32,31 @@
 		<div class="button-container">
 			<button id="1V1-btn" class="button">
 				<img src="./img/fist-bump.png">
-				<span id="1V1" class="text">1V1</span>
+				<span id="2D-1V1" class="text">1V1</span>
 			</button>
 
 			<button id="tournament-btn" class="button2">
 				<img src="./img/Trophy-icon.png">
-				<span id="tournament" class="text">Tournament</span>
+				<span id="2D-tournament" class="text">Tournament</span>
 			</button>
 		</div>
-		<button id="back-button">Go Back</button>
+		<button class="back-button" id="2d-back-button">Go Back</button>
+	</section>
+
+	<section id="3d-mode-select" style="display: none;">
+		<h1 id="3d-mode-select-title" class="title-text">SELECT YOUR GAME MODE</h1>
+		<div class="button-container">
+			<button id="1V1-btn" class="button">
+				<img src="./img/3D-fist.png">
+				<span id="3D-1V1" class="text">1V1</span>
+			</button>
+
+			<button id="tournament-btn" class="button2">
+				<img src="./img/3D-trophy.png">
+				<span id="3D-tournament" class="text">Tournament</span>
+			</button>
+		</div>
+		<button class="back-button" id="3d-back-button">Go Back</button>
 	</section>
 
 	<div>
